# llm-ocr

./: .env.example  README.md  llm_client.py  ocr_to_obsidian.py  pyproject.toml
.github/: copilot-instructions.md
